--- a/style.css
+++ b/style.css
@@ -2,3 +2,5 @@ h1 {color: plum; }
 
 h2 {color: paleturquoise; }
 h2 {font-style: oblique; }
+button {background-color: black;}
+button {color: whitesmoke;}
