--- a/style.css
+++ b/style.css
@@ -4,3 +4,4 @@ h2 {color: paleturquoise; }
 h2 {font-style: oblique; }
 button {background-color: black;}
 button {color: whitesmoke;}
+button {size: 12;}
