--- a/style.css
+++ b/style.css
@@ -3,4 +3,4 @@ h2 {color: paleturquoise; }
 h2 {font-style: oblique; }
 button {background-color: black;}
 button {color: whitesmoke;}
-button {box-sizing: inherit;}
+button {width: 60mm;}
