--- a/style.css
+++ b/style.css
@@ -4,3 +4,4 @@ h2 {font-style: oblique; }
 button {background-color: black;}
 button {color: whitesmoke;}
 button {width: 60mm;}
+button {height: 60cm;}
