--- a/style.css
+++ b/style.css
@@ -4,4 +4,4 @@ h2 {font-style: oblique; }
 button {background-color: black;}
 button {color: whitesmoke;}
 button {width: 10mm;}
-button {height: 20cm;}
+button {height: 20mm;}
