--- a/style.css
+++ b/style.css
@@ -5,3 +5,4 @@ button {background-color: black;}
 button {color: whitesmoke;}
 button {width: 50mm;}
 button {height: 20mm;}
+button {font-size: 10mm;}
