--- a/style.css
+++ b/style.css
@@ -7,3 +7,6 @@ button {width: 58mm;}
 button {height: 35mm;}
 button {font-size: 10mm;}
 p {font-style: oblique;}
+h1 {text-align: center;}
+h2 {text-align: center;}
+p {text-align: center;}
