--- a/style.css
+++ b/style.css
@@ -9,4 +9,4 @@ button {font-size: 10mm;}
 p {font-style: oblique;}
 h1 {text-align: center;}
 h2 {text-align: center;}
-p {text-align: center;}
+p {text-align: right;}
