--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ h1 {color: rgb(0, 0, 0); }
 h2 {color: rgb(0, 0, 0); }
 h2 {font-style: oblique; }
 button {background-color: rgb(234, 143, 234);}
-button {color: plum;}
+button {color: black;}
 button {width: 58mm;}
 button {height: 35mm;}
 button {font-size: 10mm;}
