--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ button {font-size: 10mm;}
 p {font-style: oblique;}
 h1 {text-align: center;}
 h2 {text-align: center;}
-p {text-align: right;}
+p {text-align: center;}
 button {text-align: center;}
 
 img {
